--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -25,6 +25,7 @@ In my free time I love to dive deep in projects ideas with the goal of learning 
 Below you can find some of the projects I've worked on in these years. Some are interesting, some are crap, some are just cringe.
 I've warned you, proceed with caution.
 </Paragraph>
+<Divider />
 <Projects />
 			
 
