--- a/src/pages/projects/ai-shorts.mdx
+++ b/src/pages/projects/ai-shorts.mdx
@@ -5,5 +5,20 @@ date: "25/08/2024"
 description: "An automated yt channel completely handled by AI."
 tags: ["AI", "Youtube"]
 ---
+import Divider from "@components/Divider.astro"
+import AgeDisplay from "@components/AgeDisplay.jsx"
+import Paragraph from "@components/Paragraph.astro"
+import Shield from "@components/Shield.astro"
+import Links from "@components/Links.astro"
+import Projects from "@components/Projects.astro"
 
-testinggg
+
+<Divider />
+<Paragraph title="AI Shorts" subtitle="This wasn't going to be easy.">
+Youtube shorts are a trend right now. However, a few months ago, me and a friend decided to try and automate completely the process
+of creating this type of content, using AI. We weren't aiming for a low-quality, half-taped together generator, that creates an obviously-AI-video.
+Our goal was to make something that looked credible, that had a chance of going viral and that users would perceive as "normal Youtube Shorts content", without
+raising any suspect it being AI.
+
+To Be Finished lol
+</Paragraph>
