fix: padding in blogposts. feat: add back to homepage HomeButton feat: add links at end of blogposts automatically

--- a/src/pages/projects/spotify-bot.mdx
+++ b/src/pages/projects/spotify-bot.mdx
@@ -5,5 +5,12 @@ date: "25/08/2024"
 description: "There's a chance you're followed by one of these accounts on Spotify."
 tags: ["Spotify", "Bots"]
 ---
+import Divider from "@components/Divider.astro"
+import Paragraph from "@components/Paragraph.astro"
+import Shield from "@components/Shield.astro"
+import Links from "@components/Links.astro"
 
-testinggg
+<Divider />
+<Paragraph title="Can you follow every single existing account on Spotify?">
+idk
+</Paragraph>
