add tags & date to blogposts

--- a/src/pages/projects/ai-shorts.mdx
+++ b/src/pages/projects/ai-shorts.mdx
@@ -2,7 +2,7 @@
 title: "Making an AI youtube shorts generator."
 layout: "@layouts/blogLayout.astro"
 date: "25/08/2024"
-description: "An automated yt channel completely handled by AI."
+description: "An automated youtube channel completely handled by AI."
 tags: ["AI", "Youtube"]
 ---
 import Divider from "@components/Divider.astro"
@@ -13,7 +13,6 @@ import Links from "@components/Links.astro"
 import Projects from "@components/Projects.astro"
 
 
-<Divider />
 <Paragraph title="AI Shorts" subtitle="This wasn't going to be easy.">
 Youtube shorts are a trend right now. However, a few months ago, me and a friend decided to try and automate completely the process
 of creating this type of content, using AI. We weren't aiming for a low-quality, half-taped together generator, that creates an obviously-AI-video.
