--- a/src/pages/projects/ai-shorts.mdx
+++ b/src/pages/projects/ai-shorts.mdx
@@ -6,18 +6,21 @@ description: "An automated youtube channel completely handled by AI."
 tags: ["AI", "Youtube"]
 ---
 import Divider from "@components/Divider.astro"
-import AgeDisplay from "@components/AgeDisplay.jsx"
 import Paragraph from "@components/Paragraph.astro"
-import Shield from "@components/Shield.astro"
-import Links from "@components/Links.astro"
-import Projects from "@components/Projects.astro"
+import { Image } from 'astro:assets';
+import project from '@assets/blog/ai-shorts/project.png';
 
 
-<Paragraph title="AI Shorts" subtitle="This wasn't going to be easy.">
-Youtube shorts are a trend right now. However, a few months ago, me and a friend decided to try and automate completely the process
-of creating this type of content, using AI. We weren't aiming for a low-quality, half-taped together generator, that creates an obviously-AI-video.
-Our goal was to make something that looked credible, that had a chance of going viral and that users would perceive as "normal Youtube Shorts content", without
-raising any suspect it being AI.
+<Paragraph title="Can Youtube Content be AI generated?" subtitle="This wasn't going to be easy.">
+A few months ago, a friend messaged me about an idea he recently had: making a Youtube-Video-Shorts-Generator-3000 using AI, that would,
+given a few information such as a video title and a body, generate a completely modern-style short video, and automatically upload it to youtube.
+His goal was to start a fully automatic youtube channel, have it go viral, and eventually monetize it.
 
-To Be Finished lol
+When he went up to me with this idea, I already knew he wasn't the first to think about this. In these last couple of years, with the rising of AI,
+I've seen tons and tons of attempts at AI generated content, and had already thought of giving it a go myself. I decided to take this as an opportunity
+to actually dip my hands into this type of projects, so we hopped on a call and started brainstorming an approach to the problem.
+</Paragraph>
+<Paragraph title="How do you go from a Reddit Post to a Youtube Short?">
+<Image src={project} alt="Our first logic map of the generator." class="shadow-md border-2 border-ebony-clay-950"/>
+Our first obstacle was: how do you start, from a link to a Reddit Post, and end up with a complete youtube video ready for upload?
 </Paragraph>
