fix: bold text overwrap

--- a/src/pages/projects/spotify-bot.mdx
+++ b/src/pages/projects/spotify-bot.mdx
@@ -26,7 +26,7 @@ A few months ago, during a university lecture, I came across a Twitter post abou
 
 ![My result](@assets/blog/spotify-bot/profile.png)
 
-If you want to view the bot check out this github repo: [**https://github.com/Dere-Wah/SpotifyFollowers**](https://github.com/Dere-Wah/SpotifyFollowers)
+If you want to view the bot check out this [**github repo**](https://github.com/Dere-Wah/SpotifyFollowers)
 
 ---
 
@@ -90,7 +90,7 @@ Although I didn’t make any money and ignored the emails since the project was 
 
 I also created another playlist titled "How to Follow Everyone" to see if anyone would reach out to me asking about the bot. And they did! I received numerous messages from people interested in the bot. Again, I didn’t sell any copies of it, but it’s evident that this could be a viable service.
 
-Eventually, since the endpoint became rate-limited and the project was well-protected, I published [**a revised version of the follow bot and scraper**](https://github.com/Dere-Wah/SpotifyFollowers) on GitHub. **Note:** This method no longer works!
+Eventually, since the endpoint became rate-limited and the project was well-protected, I published a revised version of the follow bot and scraper [**on github**](https://github.com/Dere-Wah/SpotifyFollowers) on GitHub. **Note:** This method no longer works!
 
 ---
 
